Base RN Configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Android
 *.iml
 .gradle
 /local.properties
@@ -7,3 +8,6 @@
 /build
 /captures
 .externalNativeBuild
+
+# ReactNative
+node_modules/
