--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -5,6 +5,10 @@
 
     <application
         android:name=".RKApplicationDebug"
-        tools:replace="android:name" />
+        tools:replace="android:name">
+
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+    </application>
 
 </manifest>
