--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "$rootDir/node_modules/react-native/android" }
+        maven { url "$rootDir/../../ReactNative/node_modules/react-native/android" }
     }
 }
 
